# liblatte

./: .gitignore  README.md
eval/: README.md
eval/eval_derivation/: CMakeLists.txt  eval_derivation.cc  test_timming.h
eval/insert_zero_to_wasm/: CMakeLists.txt  insert_zero_to_wasm.cc
lib/: latte.c  latte.h  latte_platform.h  latte_wasm.c  latte_wasm.h  liblatte.cmake  utils.c  utils.h
lib/crypto/: sha256.h
src/: latte.c  latte.h  latte_platform.h  latte_wasm.c  latte_wasm.h  liblatte.cmake  utils.c  utils.h
src/crypto/: sha256.c  sm3.c  sm3.h
tools/: README.md  build.sh
tools/derive_measurements/: CMakeLists.txt  derive_measurements.cc  derive_measurements.h  runner_latte.wasm.id  trainer_latte.wasm.id
tools/derive_series_of_state/: CMakeLists.txt  derive_series_of_state.c
tools/eval_derivation/: CMakeLists.txt  eval_derivation.cpp
tools/generate_runtime_common/: CMakeLists.txt  generate_runtime_common.cc
tools/insert_wasm_latte/: CMakeLists.txt  insert_wasm_latte.cc  insert_wasm_latte.h  trainer.wasm
tools/insert_zero_to_wasm/: CMakeLists.txt  insert_zero_to_wasm.cpp
tools/latte_builder/: CMakeLists.txt  helloworld.wasm  latte_builder  latte_helloworld.wasm  latte_runner.wasm  latte_trainer.wasm  runner.wasm  trainer.wasm.id
tools/latte_builder/backup/: out_runner.wasm  out_trainer.wasm
tools/latte_builder_penglai/: CMakeLists.txt  latte_builder  latte_builder.cpp
tools/verify_portable_identity/: CMakeLists.txt  runner_latte.wasm  trainer_latte.wasm  verify_portable_identity.cc  verify_portable_identity.h
